--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.jsx';
+import Tecnologies from '../components/Tecnologies.astro';
 import Contact from '../components/Contact.astro';
 
 import "../styles/global.css";
