update(imagen hero, modo oscuro en letras a solo blanco)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,17 +14,17 @@ import Footer from '../components/Footer.astro';
   <meta name="description" content="Ingeniero en Sistemas Computacionales con experiencia en desarrollo web on el conocimiento en la metodología ágil scrum">
 
   <meta name="robots" content="index, follow">
-  <meta name="theme-color" content="#09f"> <!-- Color al navegador en la parte de arriba -->
+  <meta name="theme-color" content="#1a1a1a"> <!-- Color al navegador en la parte de arriba -->
 
   <meta property="og:title" content="Portafolio de un Ingeniero en Sistemas">
   <meta property="og:description" content="Portafolio web de José con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
-  <meta property="og:image" content="/images/portafolio-preview-preview.jpeg">
+  <meta property="og:image" content="/images/portafolio-preview.jpeg">
   <meta property="og:image:alt" content="Imagen del portafolio web de José">
   <meta property="og:type" content="website">
 
-  <!-- <link rel="alternate" href="https://joseshportafolio.vercel.app/en" hreflang="en-GB"> -->
+  <link rel="alternate" href="https://josesh-portfolio.vercel.app/en" hreflang="en-GB">
 
-  <!-- <link rel="canonical" href="https://joseshportafolio.vercel.app"> -->
+  <link rel="canonical" href="https://josesh-portfolio.vercel.app">
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg"> <!-- Icono en la pestaña de la página -->
   
@@ -42,8 +42,6 @@ import Footer from '../components/Footer.astro';
 
 <style is:global>
   @import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
-
-
 
   :root{
     /* color-scheme: light dark; */
