--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -26,9 +26,10 @@
     <!-- Formulario (card) a la derecha -->
     <div class="contact-card w-full lg:w-3/5 bg-[#1a1a2e] p-8 rounded-lg border border-[#2c2c40] shadow-lg">
 
-      <h2 class="flex items-center mb-6 text-xl font-semibold gap-x-3 text-black/80 dark:text-white undefined">
-     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-prompt"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 7l5 5l-5 5" /><path d="M13 17l6 0" /></svg>
-      Tecnologías</h2>
+      <h2 class="flex items-center mb-6 text-xl font-semibold gap-x-3 text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-prompt"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 7l5 5l-5 5" /><path d="M13 17l6 0" /></svg>
+        Tecnologías
+      </h2>
 
       <div class="flex items-center gap-6 flex-wrap justify-center md:justify-start">
 
