change(css en layoout)

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,3 +1,6 @@
+---
+import "../styles/global.css";
+---
 <section class="contact text-white py-20 md:py-52 m-auto mx-6 sm:mx-6 md:mx-8 lg:mx-80" id="contact">
   
   <!-- Título principal -->
