update(imagen de meta)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import "../styles/global.css";
 <header id="navbar" class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
 
     <!-- Navegación Desktop -->
-    <nav class="bg-slate-700 bg-opacity-40 backdrop-blur-sm shadow-lg flex px-10 gap-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center">
+    <nav class="bg-slate-700 bg-opacity-40 backdrop-blur shadow-lg flex px-10 gap-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center">
       <a href="#hero" class="nav-link px-2 py-2 hover:text-purple-400 font-semibold transition duration-200">Sobre mí</a>
       <a href="#projects" class="nav-link px-2 py-2 hover:text-purple-400 font-semibold transition duration-200">Proyectos</a>
       <a href="#contact" class="nav-link px-2 py-2 hover:text-purple-400 font-semibold transition duration-200">Contacto</a>
