update(imagen de meta)

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import "../styles/global.css";
 <section class="mt-20 scroll-mt-20 md:flex-row items-center md:items-start justify-center max-w-6xl mx-auto px-6 py-16 md:py-52 gap-8" id="hero">
   <!-- Imagen arriba a la derecha -->
   <div class="mw-full md:w-auto flex items-center justify-center md:justify-start mb-10">
-    <img src="src/assets/perfil.webp" 
+    <img src="src/assets/perfil.jpeg" 
          alt="Foto de perfil de José Roberto" 
          class="w-20 h-20 rounded-full border-2 border-purple-400 object-cover"
     />
