--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
       </a>
     </div>
 
-    <!-- Formulario (card) a la derecha -->
+    <!-- Card tecnologías a la derecha -->
     <div class="contact-card w-full lg:w-3/5 bg-[#1a1a2e] p-8 rounded-lg border border-[#2c2c40] shadow-lg">
 
       <h2 class="flex items-center mb-6 text-xl font-semibold gap-x-3 text-white">
@@ -37,19 +37,19 @@ import "../styles/global.css";
       <div class="flex items-center gap-6 flex-wrap justify-center md:justify-start">
 
         <p class="text-purple-400  font-semibold">Frontend</p>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML" />
           <span>HTML</span>
         </div>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn-icons-png.flaticon.com/512/732/732190.png" alt="CSS" />
           <span>CSS</span>
         </div>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://logo.svgcdn.com/l/astro-icon.svg" alt="Astro" />
           <span>Astro</span>
         </div>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="JavaScript" />
           <span>JavaScript</span>
         </div>
@@ -57,11 +57,11 @@ import "../styles/global.css";
 
       <div class="flex items-center gap-6 flex-wrap py-6 justify-center md:justify-start">
         <p class="text-purple-400 font-semibold">Backend</p>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn.simpleicons.org/php/777BB4" alt="PHP" />
           <span>PHP</span>
         </div>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="Python" />
           <span>Python</span>
         </div>
@@ -69,11 +69,11 @@ import "../styles/global.css";
 
       <div class="flex items-center gap-6 flex-wrap justify-center md:justify-start">
         <p class="text-purple-400 font-semibold">Herramientas</p>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2 border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://cdn.simpleicons.org/git" alt="Git" />
           <span>Git</span>
         </div>
-        <div class="flex items-center gap-x-2 bg-gray-900 border-2  border-gray-400 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
+        <div class="flex items-center gap-x-2 bg-gray-800 border-2 border-cyan-800 rounded-full px-4 py-2 text-sm text-white font-medium shadow-md">
           <img class="w-4 h-4" src="https://img.icons8.com/material-rounded/24/ffffff/github.png" alt="Git" />
           <span>GitHub</span>
         </div>
