--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Footer from '../components/Footer.astro';
 
   <meta property="og:title" content="Portafolio de un Ingeniero en Sistemas">
   <meta property="og:description" content="Portafolio web de José con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
-  <meta property="og:image" content="https://my-portfolio-web-astro.vercel.app/portafolio-preview.jpeg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/robertoshd/my-portfolio-web-astro/refs/heads/main/public/portafolio-preview.jpeg?token=GHSAT0AAAAAADNCSPRII7L77YC45A4IYNEU2HSZWQA">
   <meta property="og:image:alt" content="Imagen del portafolio web de José">
   <meta property="og:type" content="website">
 
