--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,20 +11,20 @@ import Footer from '../components/Footer.astro';
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
   
-  <meta name="description" content="Ingeniero en Sistemas Computacionales con experiencia en desarrollo web on el conocimiento en la metodología ágil scrum">
+  <meta name="description" content="Ingeniero en Sistemas Computacionales con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
 
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#1a1a1a"> <!-- Color al navegador en la parte de arriba -->
 
   <meta property="og:title" content="Portafolio de un Ingeniero en Sistemas">
-  <meta property="og:description" content="Portafolio web de José con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
-  <meta property="og:image" content="https://my-portfolio-web-astro.vercel.app/portafolio-preview.jpeg">
-  <meta property="og:image:alt" content="Imagen del portafolio web de José">
+  <meta property="og:description" content="Portafolio web de Roberto con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
+  <meta property="og:image" content="https://raw.githubusercontent.com/robertoshd/my-portfolio-web-astro/refs/heads/main/public/images/image-preview.jpeg?token=GHSAT0AAAAAADNCSPRIRT3XNNAEITBH44KK2HS2BYQ">
+  <meta property="og:image:alt" content="Imagen del portafolio web de Roberto">
   <meta property="og:type" content="website">
 
-  <link rel="alternate" href="https://josesh-portfolio.vercel.app/en" hreflang="en-GB">
+  <link rel="alternate" href="https://robertosh-portfolio.vercel.app/en" hreflang="en-GB">
 
-  <link rel="canonical" href="https://josesh-portfolio.vercel.app">
+  <link rel="canonical" href="https://robertosh-portfolio.vercel.app">
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg"> <!-- Icono en la pestaña de la página -->
   
