--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Contact from '../components/Contact.astro';
 
 import "../styles/global.css";
 
-const title = "Portafolio de José Salas - Ingeniero en Sistemas con experiencia en Desarrollo Web";
+const title = "Portafolio de Roberto - Ingeniero en Sistemas con experiencia en Desarrollo Web";
 ---
 
 <Layout title={title}>
