update(url de image meta opengraph actualizacion)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,12 +10,15 @@ import Footer from '../components/Footer.astro';
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
-  
-  <meta name="description" content="Ingeniero en Sistemas Computacionales con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
 
+  <!-- HTML Meta Tags -->
+  <title>{title}</title>
+  <meta name="description" content="Ingeniero en Sistemas Computacionales con experiencia en Desarrollo Web con conocimiento en la metodología ágil scrum">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#1a1a1a"> <!-- Color al navegador en la parte de arriba -->
 
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://robertosh-portfolio.vercel.app">
   <meta property="og:title" content="Portafolio de un Ingeniero en Sistemas">
   <meta property="og:description" content="Portafolio web de Roberto con experiencia en desarrollo web con conocimiento en la metodología ágil scrum">
   <meta property="og:image" content="https://github.com/robertoshd/my-portfolio-web-astro/blob/main/public/images/image-preview.jpeg?raw=true">
@@ -28,7 +31,6 @@ import Footer from '../components/Footer.astro';
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg"> <!-- Icono en la pestaña de la página -->
   
-  <title>{title}</title>
 </head>
 <body>
 
