--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer class="bg-[#1a1a2e] text-[#d1d1d6] py-10 px-6 sm:px-6 md:px-8 lg:px-16">
   <div class="max-w-7xl mx-auto text-center">
-    <p class="text-sm">© 2025 Desarrollado por
+    <p class="text-sm">2025 Desarrollado por
     <a href="https://www.linkedin.com/in/jose-roberto-salas-hernandez/" class="text-[#8ab4f8]">José Roberto</a>
 
   </div>
